fix some compile-time warnings
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>